sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: type mismatch;
 found   : Unit
 required: Boolean
    while(ech = true){
              ^